--- a/about.html
+++ b/about.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GamerZone - About Us</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
     <style>
         *{
             margin: 0px;
@@ -16,43 +27,62 @@
             background-size: cover;
         }
         h3{
-            font-family: batmanforeveralternate;
+            font-family: Cinzel Decorative;
             font-size: 50px;
             margin: 70px 80px;
             color:rgb(0, 0, 0);
         }
         a{
-            margin: 50px 10px;
+            margin: 0px 300px;
             text-decoration: none;
             font-size: 22px;
-            color:orange;
-            font-family: century gothic;
+            color:rgb(99, 182, 182);
+            font-family: didact gothic;
             background-color: black;
-            border: 2px solid orange;
+            border: 2px solid rgb(99, 182, 182);
             padding: 10px 10px;
             border-radius: 15px;
             transition: 0.2s;
         }
         a:hover{
-            margin: 50px 10px;
+            margin: 0px 300px;
             text-decoration: none;
             font-size: 25px;
             color:black;
-            font-family: century gothic;
-            background-color: orange;
-            border: 2px solid orange;
+            font-family: didact gothic;
+            background-color: rgb(99, 182, 182);
+            border: 2px solid rgb(99, 182, 182);
             padding: 15px 15px;
             border-radius: 15px;
         }
+        .foot{
+        background-color: rgb(99, 182, 182);
+        width: 100%;
+        text-align: center;
+        position: fixed;
+        left: 0px;
+        bottom: 0px;
+    }
+    .fo{
+        font-size: 15px;
+        font-family: raleway;
+        padding: 3px 3px;
+        
+    }
     </style> 
 </head>
 <body>
     <h3>About Us...<br><br>
     Vaibhav Kumbharikar<br>
-Sai Awatade</h3>
-<div> </div>
+Sai Awatade</h3><br><br>
+<div>
     <a href="home.html">Home</a>
-        </div>
+        
+    </div>
+    <div class="foot">
+        <p class="fo">
+            &copy; All Rights are reserved for GamerZone.com by <b>Vaibhav Kumbharikar</b> and <b>Sai Awatade...</b>
+        </p>
     </div>
 </body>
 </html>
