--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GamerZone - Welcome</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
+    
     <style>
         *{
             margin: 0px;
@@ -16,7 +21,7 @@
             background-size: cover;
         }
         .wel{
-            margin-top: 400px;
+            margin-top: 500px;
             font-size: 50px;
             color: white;
             text-align: center;
@@ -33,11 +38,31 @@
             color: rgb(160, 59, 0);
             font-size: 55px;
         }
+        .foot{
+        /* background-color: cyan; */
+        color: rgb(255, 128, 0);
+        width: 100%;
+        text-align: center;
+        position: fixed;
+        left: 0px;
+        bottom: 10px;
+    }
+    .fo{
+        font-size: 20px;
+        font-family: raleway;
+        padding: 3px 3px;
+        
+    }
     </style>    
 </head>
 <body>
     <div class="wel">
-        <a href="home.html">Welcome To GamerZone...</a>
+        <a href="home.html">Welcome To GamerZone.com</a>
+    </div>
+    <div class="foot">
+        <p class="fo">
+            -By <b>Vaibhav Kumbharikar</b> and <b>Sai Awatade...</b>
+        </p>
     </div>
 </body>
 </html>
