--- a/main.html
+++ b/main.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GamerZone - Gears</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
     <style>
         *{
             margin: 0px;
@@ -54,7 +65,7 @@
         .t{
             font-size: 20px;
             color: rgb(153, 255, 0);
-            font-family: batmanforeveralternate;
+            font-family: Cinzel Decorative;
         }
         p a{
             text-decoration: none;
@@ -80,7 +91,7 @@
             background-color: rgb(153, 255, 0);
             padding: 10px 10px;
             font-size: 23px;
-            font-family: century gothic;
+            font-family: didact gothic;
             text-decoration: none;
             font-weight: 600;
             /* border: 2px solid black; */
@@ -93,7 +104,7 @@
             background-color: BLACK;
             padding: 10px 20px;
             font-size: 23px;
-            font-family: century gothic;
+            font-family: didact gothic;
             text-decoration: none;
             font-weight: 600;
             border: 2px solid rgb(153, 255, 0);
@@ -116,7 +127,7 @@
     h3{
         text-align: center;
         color:rgb(153, 255, 0);
-        font-family: batmanforeveralternate;
+        font-family: Cinzel Decorative;
             font-size: 40px;
             margin: 10px 0px;
     }
@@ -161,7 +172,7 @@
     <div class="h"><a href="home.html">Home</a></div>
     <div class="foot">
         <p class="fo">
-            &copy; All Rights are reserved for GamerZone.com by <b>Vaibhav Kumbharikar</b> & <b>Sai Awatade...</b>
+            &copy; All Rights are reserved for GamerZone.com by <b>Vaibhav Kumbharikar</b> and <b>Sai Awatade...</b>
         </p>
     </div>
 </body>
