--- a/log.html
+++ b/log.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GamerZone - Login</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
     <style>
         *{
             margin: 0px;
@@ -16,7 +27,7 @@
             background-size: cover;
         }
         .cb{
-            margin: 30px 650px;
+            margin: 50px 750px;
             padding: 25px 0px;
             /* border: 2px solid orange; */
             display: flex;
@@ -36,14 +47,14 @@
         .f{
             color: orange;
             font-size: 30px;
-            font-family: century gothic;
+            font-family: didact gothic;
         }
         a{
             margin: 50px 10px;
             text-decoration: none;
             font-size: 22px;
             color:orange;
-            font-family: century gothic;
+            font-family: didact gothic;
             background-color: black;
             border: 2px solid orange;
             padding: 10px 10px;
@@ -55,7 +66,7 @@
             text-decoration: none;
             font-size: 25px;
             color:black;
-            font-family: century gothic;
+            font-family: didact gothic;
             background-color: orange;
             border: 2px solid orange;
             padding: 15px 15px;
@@ -64,12 +75,12 @@
         .log{
             display: inline;
             color: orange;
-            font-family: batmanforeveralternate;
+            font-family: cinzel decorative;
             font-size: 40px;
             /* margin: auto 800px; */
         }
         input{
-            font-family: century gothic;
+            font-family: didact gothic;
             background-color: black;
             padding: 5px 50px;
             color:orange
@@ -115,7 +126,7 @@
     </div>
     <div class="foot">
         <p class="fo">
-            &copy; All Rights are reserved for GamerZone.com by <b>Vaibhav Kumbharikar</b> & <b>Sai Awatade...</b>
+            &copy; All Rights are reserved for GamerZone.com by <b>Vaibhav Kumbharikar</b> and <b>Sai Awatade...</b>
         </p>
     </div>
 </body>
