--- a/main.html
+++ b/main.html
@@ -37,7 +37,8 @@
             background-color: rgba(174, 0, 255, 0.589);
             justify-content: center;
             align-items: center;
-            background-color: rgba(128, 128, 128, 0.432);
+            background-color: rgba(128, 128, 128, 0.28);
+            border-radius: 25px;
         }
         .box{
             display: flex;
@@ -63,7 +64,7 @@
             border-radius: 25px  ;
         }
         .t{
-            font-size: 20px;
+            font-size: 25px;
             color: rgb(153, 255, 0);
             font-family: Cinzel Decorative;
         }
@@ -75,7 +76,7 @@
             font-size: 25px;
             border-radius: 10px;
             transition: 0.3s;
-
+            font-family: didact gothic;
         }
         p a:hover{
             text-decoration: none;
@@ -86,7 +87,7 @@
             border-radius: 10px;
         }
         .h a{
-            margin: 0px 620px;
+            margin: 0px 700px;
             color: black;
             background-color: rgb(153, 255, 0);
             padding: 10px 10px;
@@ -102,8 +103,8 @@
             /* margin: 0px 640px; */
             color: rgb(153, 255, 0);
             background-color: BLACK;
-            padding: 10px 20px;
-            font-size: 23px;
+            padding: 10px 15px;
+            font-size: 25px;
             font-family: didact gothic;
             text-decoration: none;
             font-weight: 600;
