--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>GamerZone - Welcome</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
     
@@ -28,13 +32,13 @@
         }
         a{
             text-decoration: none;
-            font-family: batmanforeveralternate;
+            font-family: Cinzel Decorative;
             color: rgb(255, 94, 0);
             transition: 0.3s;
         }
         a:hover{
             text-decoration: none;
-            font-family: batmanforeveralternate;
+            font-family: Cinzel Decorative;
             color: rgb(160, 59, 0);
             font-size: 55px;
         }
