--- a/sign.html
+++ b/sign.html
@@ -112,13 +112,13 @@
                     Register Now...
                 </div><br><br>
                 Fullname :<br>
-                <input type="text" placeholder="Enter Fullname"><br><br>
+                <input type="text" placeholder="Enter Fullname" name="txt1"><br><br>
 
                 Email :<br>
-                <input type="text" placeholder="Enter Email"><br><br>
+                <input type="email" placeholder="Enter Email" name="txt2"><br><br>
     
                 Password :<br>
-                <input type="password" placeholder="Enter Password"><br><br><br>
+                <input type="password" placeholder="Enter Password" name="txt3"><br><br><br>
             </form>
             <div><a href="sign.html">Submit</a>
             <a href="home.html">Home</a>
