--- a/about.html
+++ b/about.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GamerZone - About Us</title>
+
+    <link rel="stylesheet" media="screen and (min-width: 413px)" href="/css/stylea.css">
+    <link rel="stylesheet" media="screen and (max-width: 412px)" href="/css/phonea.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&display=swap" rel="stylesheet">
@@ -16,60 +20,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
-    <style>
-        *{
-            margin: 0px;
-            padding: 0px;
-            /* overflow: hidden; */
-        }
-        body{
-            background-image: url(about.jpg);
-            background-size: cover;
-        }
-        h3{
-            font-family: Cinzel Decorative;
-            font-size: 50px;
-            margin: 70px 80px;
-            color:rgb(0, 0, 0);
-        }
-        a{
-            margin: 0px 300px;
-            text-decoration: none;
-            font-size: 22px;
-            color:rgb(99, 182, 182);
-            font-family: didact gothic;
-            background-color: black;
-            border: 2px solid rgb(99, 182, 182);
-            padding: 10px 10px;
-            border-radius: 15px;
-            transition: 0.2s;
-        }
-        a:hover{
-            margin: 0px 300px;
-            text-decoration: none;
-            font-size: 25px;
-            color:black;
-            font-family: didact gothic;
-            background-color: rgb(99, 182, 182);
-            border: 2px solid rgb(99, 182, 182);
-            padding: 15px 15px;
-            border-radius: 15px;
-        }
-        .foot{
-        background-color: rgb(99, 182, 182);
-        width: 100%;
-        text-align: center;
-        position: fixed;
-        left: 0px;
-        bottom: 0px;
-    }
-    .fo{
-        font-size: 15px;
-        font-family: raleway;
-        padding: 3px 3px;
-        
-    }
-    </style> 
+     
 </head>
 <body>
     <h3>About Us...<br><br>
