--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GamerZone - Welcome</title>
 
+    <link rel="stylesheet" href="/css/stylei.css">
+    <link rel="stylesheet" media="screen and (max-width: 412px)" href="/css/phonei.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&display=swap" rel="stylesheet">
@@ -14,50 +17,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
     
-    <style>
-        *{
-            margin: 0px;
-            padding: 0px;
-            /* overflow: hidden; */
-        }
-        body{
-            background-image: url(WEL.jpg);
-            background-size: cover;
-        }
-        .wel{
-            margin-top: 500px;
-            font-size: 50px;
-            color: white;
-            text-align: center;
-        }
-        a{
-            text-decoration: none;
-            font-family: Cinzel Decorative;
-            color: rgb(255, 94, 0);
-            transition: 0.3s;
-        }
-        a:hover{
-            text-decoration: none;
-            font-family: Cinzel Decorative;
-            color: rgb(160, 59, 0);
-            font-size: 55px;
-        }
-        .foot{
-        /* background-color: cyan; */
-        color: rgb(255, 128, 0);
-        width: 100%;
-        text-align: center;
-        position: fixed;
-        left: 0px;
-        bottom: 10px;
-    }
-    .fo{
-        font-size: 20px;
-        font-family: raleway;
-        padding: 3px 3px;
         
-    }
-    </style>    
 </head>
 <body>
     <div class="wel">
