All Image link Update

--- a/home.html
+++ b/home.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GamerZone - Home</title>
 
-    <link rel="stylesheet" media="screen and (min-width: 413px)" href="/css/styleh.css">
-    <link rel="stylesheet" media="screen and (max-width: 412px)" href="/css/phoneh.css">
+    <link rel="stylesheet" media="screen and (min-width: 413px)" href="https://vaibhavwithgit.github.io/GamerZone.github.io/css/styleh.css">
+    <link rel="stylesheet" media="screen and (max-width: 412px)" href="https://vaibhavwithgit.github.io/GamerZone.github.io/css/phoneh.css">
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
