--- a/log.html
+++ b/log.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GamerZone - Login</title>
 
-    <link rel="stylesheet" media="screen and (min-width: 413px)" href="/css/stylel.css">
-    <link rel="stylesheet" media="screen and (max-width: 412px)" href="/css/phonel.css">
+    <link rel="stylesheet" media="screen and (min-width: 413px)" href="https://vaibhavwithgit.github.io/GamerZone.github.io/css/stylel.css">
+    <link rel="stylesheet" media="screen and (max-width: 412px)" href="https://vaibhavwithgit.github.io/GamerZone.github.io/css/phonel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
