--- a/sign.html
+++ b/sign.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GamerZone - Sign</title>
 
-    <link rel="stylesheet" media="screen and (min-width: 413px)" href="/css/styles.css">
-    <link rel="stylesheet" media="screen and (max-width: 412px)" href="/css/phones.css">
+    <link rel="stylesheet" media="screen and (min-width: 413px)" href="https://vaibhavwithgit.github.io/GamerZone.github.io/css/styles.css">
+    <link rel="stylesheet" media="screen and (max-width: 412px)" href="https://vaibhavwithgit.github.io/GamerZone.github.io/css/phones.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&display=swap" rel="stylesheet">
