Main.html image update

--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
     <h3>Choose Your Gears...</h3>
     <div class="cb">
         <div class="box">
-            <img src="/img/L.jpg"><br>
+            <img src="https://vaibhavwithgit.github.io/GamerZone.github.io/img/L.jpg"><br>
             <p class="t">
                 Gaming<br>Laptop<br><br><br>
                 <a href="#">Buy Now...</a>
@@ -33,7 +33,7 @@
         </div>
 
         <div class="box">
-            <img src="/img/M.jpg"><br>
+            <img src="https://vaibhavwithgit.github.io/GamerZone.github.io/img/M.jpg"><br>
             <p class="t">
                 Gaming<br>Mouse<br><br><br>
                 <a href="#">Buy Now...</a>
@@ -41,7 +41,7 @@
         </div>
 
         <div class="box">
-            <img src="/img/K.jpg"><br>
+            <img src="https://vaibhavwithgit.github.io/GamerZone.github.io/img/K.jpg"><br>
             <p class="t">
                 Gaming<br>Keyboard<br><br><br>
                 <a href="#">Buy Now...</a>
@@ -49,7 +49,7 @@
         </div>
 
         <div class="box">
-            <img src="/img/H.jpg"><br>
+            <img src="https://vaibhavwithgit.github.io/GamerZone.github.io/img/H.jpg"><br>
             <p class="t">
                 Gaming<br>Headset<br><br><br>
                 <a href="#">Buy Now...</a>
