--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>GamerZone - Welcome</title>
 
     <link rel="stylesheet" href="https://vaibhavwithgit.github.io/GamerZone.github.io/css/stylei.css">
-    <link rel="stylesheet" href="https://vaibhavwithgit.github.io/GamerZone.github.io/css/stylei.css">
+    <link rel="stylesheet" href="https://vaibhavwithgit.github.io/GamerZone.github.io/css/phonei.css">
     <link rel="stylesheet" media="screen and (max-width: 412px)" href="/css/phonei.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
