--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GamerZone - Welcome</title>
 
-    <link rel="stylesheet" media="screen and (min-width: 413px)" href="https://vaibhavwithgit.github.io/GamerZone.github.io/css/stylei.css">
-    <link rel="stylesheet" media="screen and (max-width: 412px)" href="https://vaibhavwithgit.github.io/GamerZone.github.io/css/phonei.css">
+    <link rel="stylesheet" media="screen and (min-width: 413px)" href="css/stylei.css">
+    <link rel="stylesheet" media="screen and (max-width: 412px)" href="css/phonei.css">
 
     <!-- <link rel="stylesheet" href="https://vaibhavwithgit.github.io/GamerZone.github.io/css/stylei.css">
     <link rel="stylesheet" href="https://vaibhavwithgit.github.io/GamerZone.github.io/css/phonei.css">
@@ -25,7 +25,7 @@
 </head>
 <body>
     <div class="wel">
-        <a href="home.html">Welcome To GamerZone.com</a>
+        <a href="home.html">Click Here<br>To enter<br>GamerZone.com</a>
     </div>
     <div class="foot">
         <p class="fo">
