--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GamerZone - Welcome</title>
 
-    <link rel="stylesheet" media="screen and (min-width: 413px)" href="css/stylei.css">
-    <link rel="stylesheet" media="screen and (max-width: 412px)" href="css/phonei.css">
+    <link rel="stylesheet" media="screen and (min-width: 413px)" href="https://vaibhavwithgit.github.io/GamerZone.github.io/css/stylei.css">
+    <link rel="stylesheet" media="screen and (max-width: 412px)" href="https://vaibhavwithgit.github.io/GamerZone.github.io/css/phonei.css">
 
     <!-- <link rel="stylesheet" href="https://vaibhavwithgit.github.io/GamerZone.github.io/css/stylei.css">
     <link rel="stylesheet" href="https://vaibhavwithgit.github.io/GamerZone.github.io/css/phonei.css">
