--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="foot">
         <p class="fo">
-            -By <b>Vaibhav Kumbharikar</b> and <b>Sai Awatade...</b>
+            -By <b>Vaibhav Kumbharikar...</b>
         </p>
     </div>
 </body>
