--- a/main.html
+++ b/main.html
@@ -60,7 +60,7 @@
     <div class="h"><a href="home.html">Home</a></div>
     <div class="foot">
         <p class="fo">
-            &copy; All Rights are reserved for GamerZone.com by <b>Vaibhav Kumbharikar</b> and <b>Sai Awatade...</b>
+            &copy; All Rights are reserved for GamerZone.com by <b>Vaibhav Kumbharikar...</b>
         </p>
     </div>
 </body>
