--- a/about.html
+++ b/about.html
@@ -25,8 +25,7 @@
 <body>
     <h3>About Us...<br><br>
     Team -<br>
-    Vaibhav Kumbharikar<br>
-Sai Awatade</h3><br><br>
+    Vaibhav Kumbharikar</h3><br><br>
 <div>
     <a href="home.html">Home</a>
         
