--- a/log.html
+++ b/log.html
@@ -44,7 +44,7 @@
     </div>
     <div class="foot">
         <p class="fo">
-            &copy; All Rights are reserved for GamerZone.com by <b>Vaibhav Kumbharikar</b> and <b>Sai Awatade...</b>
+            &copy; All Rights are reserved for GamerZone.com by <b>Vaibhav Kumbharikar...</b>
         </p>
     </div>
 </body>
