Minor Name Change

--- a/about.html
+++ b/about.html
@@ -23,8 +23,7 @@
      
 </head>
 <body>
-    <h3>About Us...<br><br>
-    Team -<br>
+    <h3>By<br><br><br>
     Vaibhav Kumbharikar</h3><br><br>
 <div>
     <a href="home.html">Home</a>
@@ -32,7 +31,7 @@
     </div>
     <div class="foot">
         <p class="fo">
-            &copy; All Rights are reserved for GamerZone.com by <b>Vaibhav Kumbharikar</b> and <b>Sai Awatade...</b>
+            &copy; All Rights are reserved for GamerZone.com by <b>Vaibhav Kumbharikar...</b>
         </p>
     </div>
 </body>
